--- a/aplicacion/templates/aplicacion/pago.html
+++ b/aplicacion/templates/aplicacion/pago.html
@@ -5,70 +5,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pedido Confirmado</title>
+    <title>Página de Pago</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <style>
-        body {
-            background-color: #f2f2f2;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-        }
-
-        .alerta {
-            max-width: 500px;
-            background-color: #fff;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            display: none;
-        }
-
-        .mensaje {
-            margin-top: 20px;
-            font-size: 18px;
-        }
-
-        .boton {
-            margin-top: 30px;
-        }
-
-        @media (max-width: 768px) {
-            .alerta {
-                padding: 20px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="{% static 'aplicacion/css/pago.css' %}"> 
 </head>
 
 <body>
-    <div class="alerta" id="confirmacion">
-        <i class="fas fa-check-circle fa-5x text-success"></i>
-        <h2 class="mt-3">Pedido Confirmado</h2>
-        <div class="mensaje">
-            <p>Su pedido ha sido confirmado correctamente.
-                Tu pedido estara llegando en los proximos dias.
-            </p>
-            <p>Tu boleta llegará al correo registrado o la puedes encontrar en mis pedidos.</p>
-        </div>
-        <a href="{% url 'TiendaOnline' %}" class="btn btn-primary">Volver a la Tienda</a>
+    <div class="container">
+        <h2>Página de Pago</h2>
+        <form>
+            <div class="form-group">
+                <label for="card-holder-name">Nombre del Titular de la Tarjeta</label>
+                <input type="text" id="card-holder-name" placeholder="Nombre y Apellido" required onkeypress="validateKeyPress(event)">
+            </div>
+            
+            <div class="form-group">
+                <label for="card-number">Número de Tarjeta</label>
+                <input type="text" id="card-number" placeholder="Número de Tarjeta" required>
+            </div>
+            <div class="form-group">
+                <label for="expiry-date">Fecha de Expiración (MM/YY)</label>
+                <input type="text" id="expiry-date" placeholder="MM/YY" required>
+            </div>
+            <div class="form-group">
+                <label for="cvc">CVC</label>
+                <input type="text" id="cvc" placeholder="CVC" maxlength="3" required>
+            </div>
+            <div class="form-group">
+                <label for="address">Dirección de Facturación</label>
+                <input type="text" id="address" placeholder="Dirección de facturación" required>
+            </div>
+            <button type="button" onclick="validateForm()">Pagar</button>
+            <div class="payment-icons">
+                <i class="fab fa-cc-visa"></i>
+                <i class="fab fa-cc-mastercard"></i>
+                <i class="fab fa-cc-amex"></i>
+                <i class="fab fa-cc-discover"></i>
+            </div>
+            <div id="error-message" class="error-message"></div>
+            <div id="success-message" class="success-message"></div>
+            <div class="btn-group" style="margin-top: 20px;">
+                <a href="{% url "TiendaOnline" %}" class="btn btn-primary">Volver</a>
+                <a href="{% url "inicio" %}" class="btn btn-primary">Cerrar Sesión</a>
+            </div>
+        </form>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            mostrarConfirmacion();
-        });
-
-        function mostrarConfirmacion() {
-            const confirmacion = document.getElementById('confirmacion');
-            confirmacion.style.display = 'block';
-        }
-    </script>
+    <script src="{% static 'aplicacion/js/pago.js' %}"></script>
+    
 </body>
 
 </html>
